--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,8 @@
 
       body {
         background-color: black;
+        color: white;
+        text-align: center;
       }
 
       .color {
@@ -26,7 +28,43 @@
     </style>
   </head>
   <body>
+    <h1><a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">Hack Club</a> @ TechJam</h1>
+    <p style="margin-bottom: 20px">Click on something and watch the TV display 👀</p>
     <div id="emojis"></div>
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 20px;
+      "
+    >
+      <div
+        class="color"
+        data-color="#8DA4C2"
+        style="background-color: #8DA4C2"
+      ></div>
+      <div
+        class="color"
+        data-color="#5C80A5"
+        style="background-color: #5C80A5"
+      ></div>
+      <div
+      class="color"
+      data-color="#D0D2D3"
+      style="background-color: #D0D2D3"
+    ></div>
+    <div
+      class="color"
+      data-color="#9EAB84"
+      style="background-color: #9EAB84"
+    ></div>
+    <div
+      class="color"
+      data-color="#455C29"
+      style="background-color: #455C29"
+    ></div>
+    </div>
     <div
       style="
         display: flex;
@@ -42,13 +80,13 @@
       ></div>
       <div
         class="color"
-        data-color="#B14134"
-        style="background-color: #b14134"
+        data-color="#EC3750"
+        style="background-color: #EC3750"
       ></div>
       <div
         class="color"
-        data-color="#a633d6"
-        style="background-color: #a633d6"
+        data-color="#F1C40F"
+        style="background-color: #F1C40F"
       ></div>
       <div
         class="color"
