--- a/views/display.html
+++ b/views/display.html
@@ -33,14 +33,15 @@
       }
 
       .content {
-        display: block;
-        width: 100%;
-        transform: translateX(100%);
-        animation: move 10s linear infinite;
+        display: inline-block;
+        /* transform: translateX(100%); */
+        animation: move 15s linear infinite;
+        white-space: nowrap;
+        /* padding-left: 100%; */
       }
 
       @keyframes move {
-  to { transform: translateX(-100%); }
+  to { transform: translateX(-50%); }
 }
     </style>
   </head>
@@ -70,7 +71,7 @@
     </div>
     <div class="box">
       <h2 class="content">
-        SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 
+        SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱 SCAN ME 📱
        </h2>
     </div>
 
