--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,10 @@
         border-radius: 50%;
         border: 3px solid white;
       }
+
+      .color:hover {
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -119,6 +123,7 @@
         required
       />
     </form>
+    <p style="position: absolute; bottom: 2vw; right: 2vw ">Ps. we're hiring! Learn more <a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">here</a></p>
 
     <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
     <script src="/socket.io/socket.io.js"></script>
