--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,7 @@
         background-color: black;
         color: white;
         text-align: center;
+        position: relative;
       }
 
       .color {
@@ -33,7 +34,7 @@
   </head>
   <body>
     <h1><a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">Hack Club</a> @ TechJam</h1>
-    <p style="margin-bottom: 20px">Click on something and watch the TV display 👀</p>
+    <p style="margin-bottom: 20px">Click on something, watch the TV display 👀</p>
     <div id="emojis"></div>
     <div
       style="
@@ -43,21 +44,21 @@
         margin-top: 20px;
       "
     >
-      <div
-        class="color"
-        data-color="#8DA4C2"
-        style="background-color: #8DA4C2"
-      ></div>
+    <div
+    class="color"
+    data-color="black"
+    style="background-color: black"
+  ></div>
+  <div
+    class="color"
+    data-color="#EC3750"
+    style="background-color: #EC3750"
+  ></div>
       <div
         class="color"
         data-color="#5C80A5"
         style="background-color: #5C80A5"
       ></div>
-      <div
-      class="color"
-      data-color="#D0D2D3"
-      style="background-color: #D0D2D3"
-    ></div>
     <div
       class="color"
       data-color="#9EAB84"
@@ -68,40 +69,6 @@
       data-color="#455C29"
       style="background-color: #455C29"
     ></div>
-    </div>
-    <div
-      style="
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        margin-top: 20px;
-      "
-    >
-      <div
-        class="color"
-        data-color="black"
-        style="background-color: black"
-      ></div>
-      <div
-        class="color"
-        data-color="#EC3750"
-        style="background-color: #EC3750"
-      ></div>
-      <div
-        class="color"
-        data-color="#F1C40F"
-        style="background-color: #F1C40F"
-      ></div>
-      <div
-        class="color"
-        data-color="#338eda"
-        style="background-color: #338eda"
-      ></div>
-      <div
-        class="color"
-        data-color="#33d6a6"
-        style="background-color: #33d6a6"
-      ></div>
     </div>
 
     <form id="message">
