--- a/views/display.html
+++ b/views/display.html
@@ -19,6 +19,7 @@
         background-color: black;
         color: #fafafa;
         transition: background-color 100ms ease-in-out;
+        overflow: hidden;
       }
 
       .box {
