--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">Hack Club</a> @ TechJam</h1>
+    <!-- <h1><a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">Hack Club</a> @ TechJam</h1> -->
     <p style="margin-bottom: 20px">Click on something, watch the TV display 👀</p>
     <div id="emojis"></div>
     <div
@@ -90,7 +90,7 @@
         required
       />
     </form>
-    <p style="position: absolute; bottom: 2vw; right: 2vw ">Ps. we're hiring! Learn more <a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">here</a></p>
+    <p style="padding-top: 10px;">Ps. <a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">Hack Club</a> is hiring! Learn more <a href="https://hackclub.com/jobs" target="_blank" style="background-color: #EC3750; padding: 3px 5px; color: white; border-radius: 5px; text-decoration: none;">here</a></p>
 
     <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
     <script src="/socket.io/socket.io.js"></script>
