--- a/views/display.html
+++ b/views/display.html
@@ -79,7 +79,7 @@
     <div
       style="
         position: absolute;
-        bottom: 5vw;
+        top: 5vw;
         left: 0;
         right: 0;
         text-align: center;
